tests/sksl/errors/SwitchDuplicateCase.glsl
### Compilation failed:

error: 5: duplicate case value
1 error
